--- a/same.css
+++ b/same.css
@@ -103,67 +103,32 @@ body{
     display:none;
 }
 
-.footerTop{
-    text-align: center;
+.footer {
+    background-color: #1E293B;
+    text-align: center; 
+    padding: 20px 0; 
+    font-size: 1rem;
+    letter-spacing: 3px;
     position: relative;
-}
-
-.footerTop p{
-    font-size:28px;
-}
-
-.footerTop p:nth-last-child(3){
-    font-size:14px;
-}
-
-#top{
-    position: absolute;
-    bottom: 20%;
-    right: 5%;
-    cursor: pointer;
-}
-
-#line{
-    margin-top:50px;
-}
-
-.com_footer{
-    width: 90%;
-    margin: 50px auto;
-}
-
-.com_footer p{
-    margin:25px 0;
-}
-
-.footerTime{
-    font-size: 14px;
-    letter-spacing: 4px;
-}
-
-.sponsor{
-    clear: both;
+    bottom: 0;
     width: 100%;
-    text-align: center;
+    border-top: 0.5px solid #ffffff;
+    margin-top: 50px;
 }
 
-.sponsor img{
-    margin-top:50px ;
-    margin-left: 25px;
-    width: 70px;
+/* IG 圖示 */
+.social-media {
+    margin-top: 10px;
 }
 
-.phone_footer{
-    display: none;
+.instagram-icon {
+    width: 30px; 
+    height: auto; 
+    transition: transform 0.3s ease;
 }
 
-/* ------------沒有贊助商要加---------------- */
-.com_footer{
-    height: 180px;
-}
-
-.footerRight{
-    margin-bottom: 30px;
+.instagram-icon:hover {
+    transform: scale(1.1);  /* 滑鼠懸停時放大 */
 }
 
 /* -------------------手機版------------------ */
@@ -179,7 +144,7 @@ body{
         text-align: center;
         background-color:#0E1E3C ;
         position: fixed;
-        height: 100px;
+        height: 70px;
         line-height: 100px;
         z-index: 1;
         box-shadow: 0px 1px 5px #071329;
@@ -246,96 +211,12 @@ body{
         margin: 0 auto;
     }
 
-    .empty{
-        display: block;
-        height: 100px;
-    }
-
     #menu{
         display: none;
     }
 
     #top{
         width: 25px;
-    }
-
-    .footerTop p{
-        font-size:24px;
-    }
-    
-    .footerTop p:nth-last-child(3){
-        font-size:10px;
-    }
-
-    .com_footer{
-        display: none;
-    }
-
-    .phone_footer{
-        display: block;
-        padding-bottom: 80px;
-    }
-
-    .footerUp,.footerDown{
-        display: flex;
-        letter-spacing: 2px;
-        text-indent: 0px;
-        width: 100%;
-        height: 300px;
-    }
-
-    #footerUpLeft,#footerDownRight{
-        justify-content: space-around;
-        display:inline;
-        width:35%;
-        position: relative;
-        margin-right: 15px;
-    }
-
-    #footerDownRight{
-        margin-right:0 ;
-    }
-
-    #footerUpRight,#footerDownLeft{
-        justify-content:space-around;
-        display: flex;
-        width:65%;
-        margin-top:50px;
-    }
-
-    #phone_footer{
-        margin-left: 50px;
-        margin-top: 15px;
-    }
-
-    #footerUpRight_Left,#footerDownLeft_Left{
-        justify-content: space-around;
-        width:25%;
-        font-size:28px;
-        text-align:center;
-        margin-left: 15px;
-    }
-
-    #footerUpRight_Right,#footerDownLeft_Right{
-        justify-content: space-around;
-        width:75%;
-        margin-top:30px;
-        margin-right:10px;
-    }
-
-    #footerUpRight_Right{
-        margin-right:20px;
-    }
-
-    #footerUpRight_Right span,#footerDownLeft_Right span{
-        display: block;
-        font-size: 22px;
-    }
-
-    #phone_footer2{
-        float: right;
-        margin-right: 50px;
-        margin-top: 30px;
     }
 }
 
@@ -356,41 +237,11 @@ body{
         height: 300px;
     }
 
-    #phone_footer{
-        margin-left: 15px;
-        margin-top: 15px;
-        width: 175px;
+    .footer {
+        font-size: 0.9rem;  /* 在小螢幕上稍微調小字體 */
     }
-
-    .footerUp,.footerDown{
-        height: 250px;
-    }
-    
-    #footerUpRight,#footerDownLeft{
-        margin-top:35px;
-    }
-
-    #footerUpRight_Left,#footerDownLeft_Left{
-        font-size:24px;
-    }
-
-    #footerUpRight_Right,#footerDownLeft_Right{
-        margin-top:28px;
-        margin-left: 25px;
-    }
-
-    #footerUpRight_Right span,#footerDownLeft_Right span{
-        display: block;
-        font-size: 18px;
-    }
-
-    #phone_footer2{
-        width: 200px;
-        margin-right: 15px;
-    }
-
-    .sponsor img{
-        width: 60px;
+    .instagram-icon {
+        width: 25px;  /* 在手機上略微縮小圖示 */
     }
 }
 
@@ -419,79 +270,6 @@ body{
 
     #font-size{
         font-size: 20px;
-    }
-
-    .about img,.aboutworks img{
-        width: 200px;
-    }
-    
-    .footerTop p{
-        font-size:14px;
-        letter-spacing: 5px;
-    }
-    
-    .footerTop p:nth-last-child(3){
-        font-size:10px;
-    }
-
-    #FB{
-        width: 30px;
-        margin-top: 10px;
-    }
-
-    #line{
-        margin-top:100px;
-    }
-
-    #top{
-        width: 20px;
-        bottom: 10%;
-    }
-
-    .footerUp,.footerDown{
-        height: 200px;
-    }
-
-    .footerUp{
-        margin-top: 25px;
-    }
-
-    #phone_footer{
-        margin-top: 15px;
-        width: 100px;
-    }
-
-    #footerUpRight_Left,#footerDownLeft_Left{
-        font-size:16px;
-    }
-
-    #footerUpRight_Left{
-        margin-left: 0;
-    }
-    
-    #footerUpRight,#footerDownLeft{
-        margin-top: 0px;
-    }
-
-    #footerUpRight_Right,#footerDownLeft_Right{
-        margin-top: 18px;
-        margin-left: 10px;
-    }
-
-    #footerUpRight_Right span,#footerDownLeft_Right span{
-        font-size: 12px;
-    }
-
-    #phone_footer2{
-        width: 120px;
-        margin-top: 15px;
-        margin-right: 0;
-    }
-
-    .sponsor img{
-        width: 35px;
-        margin-left: 10px;
-        margin-top:0px ;
     }
 
 }
