--- a/index.css
+++ b/index.css
@@ -22,34 +22,15 @@ h1{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 85vh;
+    height: 80vh;
     padding: 0;
     overflow: hidden;
 }
 
-/* 🔹 左側文字 */
-.hero-text {
-    width: 20%;
-    writing-mode: vertical-rl;
-    text-align: center;
-    color: #ffffff;
-    font-weight: bold;
-    padding-right: 25px;
-}
-
-.hero-text h1 {
-    font-size: 2.5rem;
-    margin-top: -150px;
-}
-
-.hero-text p {
-    font-size: 1.8rem;
-}
-
-/* 右側圖片區容器 */
+/* 左側圖片區容器 */
 .hero-image-container {
-    width: 80%;
-    height: 100vh;  /* 設定為 100vh 填滿螢幕高度 */
+    width: 78%;
+    height: 100%;  /* 設定為 100vh 填滿螢幕高度 */
     overflow: hidden;
     position: relative;
 }
@@ -72,7 +53,7 @@ h1{
     position: absolute;
     opacity: 0;  /* 預設隱藏所有圖片 */
     transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-    border-radius: 0 0 0 25%;
+    border-radius: 0 0 15% 0;
 }
 
 /* 顯示當前圖片 */
@@ -81,68 +62,33 @@ h1{
     transform: translateY(-10px);  /* 輕微上移 */
 }
 
-/* -----------------手機版----------------- */
-@media screen and (max-width:1024px){
-    h1{
-        font-size: 24px;
-        margin-bottom: 0;
-    }
-
-    .myPopup{
-        display: none;
-        transition: 0.3s;
-        width: 100vw;
-        height: 100vh;
-        position: fixed;
-        left: 0;
-        top: 0;
-        z-index: 100;
-        background-color: rgb(0, 0, 0,0.8);
-        text-align: center;
-        line-height: 100vh;
-    }
-
-    .popup{
-        background: url(./photo/index/popup.jpg) no-repeat;
-        background-size: 100%;
-        width: 300px;
-        height: 100%;
-        margin: 0 auto;
-        background-position: center;
-        position: relative;
-    }
-
-    .popup_click{
-        display: inline;
-        background:url(./photo/index/popup_wood2.png) no-repeat;
-        background-size: 100%;
-        background-position:center;
-        width: 110px;
-        position: absolute;
-        top:120px;
-    }
-
-    .myPopup a:hover{
-        color: white;
-    }
-
-    .myPopup p{
-        writing-mode:horizontal-tb;
-        color:#614728;
-        font-size:22px;
-        width: 100%;
-        margin: 0 auto;
-    }
-
-    .p_click{
-        cursor: pointer;
-    }
-
-    .p_click:hover{
-        color: white;
-    }
-      
+/* 🔹 右側logo */
+.hero-text {
+    width: 22%;
+    padding-right: 25px;
+    margin: 0 auto;
 }
+
+.hero-text h1 {
+    font-size: 2.5rem;
+    margin-top: -150px;
+}
+
+.hero-text p {
+    font-size: 1.8rem;
+}
+
+.camera{
+    text-align: right;
+    position: relative;
+    top: -30px;
+    right: -30px;
+    opacity: 30%;
+}
+
+
+
+/* -----------------手機版----------------- */
 
 @media screen and (max-width:768px){
     .hero {
