--- a/same.css
+++ b/same.css
@@ -2,11 +2,6 @@
     box-sizing: border-box;
 }
 
-@font-face{
-    font-family: LucidaGrande;
-    src: url(./ttc/LucidaGrande.woff2);
-}
-
 body{
     margin: 0;
     padding: 0;
@@ -14,7 +9,7 @@ body{
 
 .container{
     overflow:hidden;
-    font-family: "Noto Serif TC";
+    font-family: "Noto Serif TC", serif;
     letter-spacing: 8px;
     text-indent: 8px;
     background-color: #1E293B;
@@ -63,12 +58,7 @@ body{
     color:#BFA584;
 }
 
-.section2{
-    width: 100%;
-    height: 100vh;
-    background-image: url(./photo/section2.png);
-    background-size: cover;
-}
+
 
 .footer {
     background-color: #1C1C1B;
