--- a/index.css
+++ b/index.css
@@ -103,7 +103,7 @@ h1{
     background-color: white;
     color: #1E293B;
     position: relative;
-    top: -800px;
+    z-index: 1;
 }
 
 .marquee {
@@ -128,19 +128,89 @@ h1{
 
 .section2{
     width: 100%;
-    height: 100vh;
+    height: 1000px;
     background-image: url(./photo/section2.png);
     background-size: cover;
     position: relative;
-    top: -80px;
-    z-index: 0;
+    top: -180px;
+    
+}
+
+.section2_item_container{
+    width: 100%;
+    position: absolute;
+    top: 30%;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* 響應式排列 */
+    display: flex;
+    flex-wrap: wrap; /* 確保換行 */
+    justify-content: center; /* 水平置中 */
+    align-items: center; /* 垂直置中 */
+}
+
+/* 每個作品封面 */
+.section2_item {
+    margin: 10px;
+    width: 250px;
+    height: 400px; 
+    overflow: hidden;
+    display: block;
+    position: relative;
+}
+
+/* 圖片樣式 */
+.section2_item img {
+    width: 95%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 100px 0 100px 0;
+    opacity: 70%;
+}
+
+/* 滑鼠懸停時，圖片放大效果 */
+.section2_item:hover{
+    transition: transform 0.3s ease-in-out;
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.section2_item:hover img {
+    opacity: 1; 
 }
 
 
+/* 標題樣式 */
+.section2_item h3 {
+    font-family: "Noto Serif TC", serif;
+    font-weight: 700;
+    font-size: 18px;
+    color: #ffffff;
+    background-color:#1E293B ;
+    width: 170px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 4px;
+    position: absolute;
+    right: 0;
+    bottom: 20%;
+    border-radius: 0 15px 0 15px;
+}
+
+footer{
+    position: relative;
+    margin-top: -200px;
+}
 
 /* -----------------手機版----------------- */
 
-@media screen and (max-width:768px){
+@media screen and (max-width:1349px){
+    .section2{
+        height: 1250px;
+    }
+}
+
+@media screen and (max-width:809px){
     .hero {
         height: auto;
         justify-content: center;  /* 垂直置中 */
@@ -180,9 +250,17 @@ h1{
     .scroll{
         top: -120px;
     }
+
+    .section2{
+        height: 1550px;
+    }
+
+    .section2_item_container{
+        top: 18%;
+    }
 }
 
-@media screen and (max-width:500px){
+@media screen and (max-width:539px){
     .hero-text {
         width: 60px;
     }
@@ -199,8 +277,21 @@ h1{
         top: -80px;
         right: -20px;
     }
+    
+    .marquee-container{
+        position: relative;
+        top: 50px;
+    }
 
     .section2{
         top: -50px;
+    }
+
+    .section2{
+        height: 2000px;
+    }
+
+    .section2_item_container{
+        top: 8%;
     }
 }
