--- a/index.css
+++ b/index.css
@@ -22,7 +22,16 @@ h1{
     overflow: hidden;
 }
 
-/* 左側圖片區容器 */
+/* 🔹 左側logo */
+.hero-text {
+    width: 140px;
+    padding-right: 25px;
+    margin: 0 auto;
+    position: relative;
+    top: -25px;
+}
+
+/* 右側圖片區容器 */
 .hero-image-container {
     width: 78%;
     height: 100%;  /* 設定為 100vh 填滿螢幕高度 */
@@ -48,7 +57,7 @@ h1{
     position: absolute;
     opacity: 0;  /* 預設隱藏所有圖片 */
     transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-    border-radius: 0 0 15% 0;
+    border-radius: 0 0 0 15%;
 }
 
 /* 顯示當前圖片 */
@@ -57,19 +66,9 @@ h1{
     transform: translateY(-10px);  /* 輕微上移 */
 }
 
-/* 🔹 右側logo */
-.hero-text {
-    width: 140px;
-    padding-right: 25px;
-    margin: 0 auto;
-    position: relative;
-    top: -25px;
-}
-
 .camera{
     text-align: right;
     position: relative;
-    top: -30px;
     right: -30px;
     opacity: 30%;
     z-index: 1;
@@ -82,7 +81,7 @@ h1{
 .scroll{
     text-align: left;
     position: relative;
-    top: -170px;
+    top: -200px;
     right: -30px;
 }
 
@@ -248,7 +247,7 @@ footer{
     }
 
     .scroll{
-        top: -120px;
+        top: -170px;
     }
 
     .section2{
@@ -262,10 +261,11 @@ footer{
 
 @media screen and (max-width:539px){
     .hero-text {
-        width: 60px;
+        width: 50px;
     }
 
     .hero-image-container {
+        width: 85%;
         height: 40vh;  /* 更小的圖片顯示區域 */
     }
 
